<resources>

    <!-- LoginActivity -->
    <string name="bienvenidoInicio">Bienvenido</string>
    <string name="mensajeInicioSesionInvitado">Inicio de Sesion como Invitado</string>
    <string name="espanol">ES</string>
    <string name="ingles">EN</string>
    <string name="error_iniciar_sesion">Error al iniciar sesión: %1$s</string>
    <string name="bienvenido_inicio">Bienvenido, %1$s</string>
    <string name="iniciarS">Iniciar Sesion como Invitado</string>


    <!-- MapaInteractivoActivity_Leyenda -->
    <string name="ly_contentD">Cerrar Leyenda</string>
    <string name="ly_title">Leyenda</string>
    <string name="ly_recomend">Recomendado para\nEmpezar</string>
    <string name="ly_lI">Libro Independiente</string>
    <string name="ly_iS">Inicio Saga</string>
    <string name="ly_pS">Perteneciente a Saga</string>

    <!-- DetallesLibroActivity -->
    <string name="dl_sinp">Sinopsis</string>
    <string name="dl_descripcion">Hace seis años, un asesino mató al rey Alethi, y ahora está asesinando a los gobernantes de todo Roshar; entre sus principales objetivos es Dalinar.
        Kaladin está al mando de los guardaespaldas reales, un puesto controvertido por su baja condición, y debe proteger al rey y a Dalinar, mientras que en secreto domina nuevos
        poderes extraordinarios vinculados a Syl. Shallan tiene la carga de impedir el regreso de Voidbringers y el fin de la desolada civilización que queda. Los Parshendi están convencidos
        por su líder a arriesgarlo todo en una apuesta desesperada con las fuerzas sobrenaturales que una vez desaparecieron.
    </string>
    <string name="dl_Isonpa">Icono sinopsis abajo</string>
    <string name="dl_tituloNotas">Notas</string>
    <string name="dl_valor">Valoracion</string>

    <!-- EditarNotaActivity -->
    <string name="en_guardarN">Guardar</string>

    <!-- AjustesActivity -->
    <string name="ajt_sesion">Sesion: </string>
    <string name="ajt_cerrarS">Cerrar Sesion</string>
    <string name="ajt_noticD">Noticias Destacadas</string>
    <string name="ajt_nConex">No hay Conexion a Internet</string>
    <string name="ajt_stad">Estadisticas</string>
    <string name="ajt_pagL">Páginas leídas:</string>
    <string name="ajt_libL">Libros leídos:</string>
    <string name="ajt_sagE">Sagas Empezadas:</string>
    <string name="ajt_sagL">Sagas Leídas:</string>
    <string name="ajt_enlaces">Enlaces de Interes</string>

    <!-- LibroActivity -->
    <!-- Spinner Leído -->
    <string name="spinner_leido_all">Todos</string>
    <string name="spinner_leido_read">Leídos</string>
    <string name="spinner_leido_started">Empezados</string>
    <string name="spinner_leido_not_started">No empezados</string>
    <!-- Spinner Sagas -->
    <string name="spinner_sagas_all_sagas">Todas las sagas</string>
    <!-- Otros strings necesarios -->
    <string name="error_cargar_libros">Error al cargar libros</string>
    <string name="all_sagas_default">Todas las sagas</string>
    <string name="all_default">Todos</string>
    <string name="read_default">Leídos</string>
    <string name="started_default">Empezados</string>
    <string name="not_started_default">No empezados</string>

    <!-- Otros -->
    <string name="error_sincronizacion">synchronization error</string>
    <string name="app_name">AppSandersonSM</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="default_web_client_id" translatable="false">592736434825-l422ecmildqh7i7cn1i0mcnf4ae5mqfs.apps.googleusercontent.com</string>
    <string name="no_internet_connection">No hay acceso a Internet\n</string>
    <string name="felicidades">¡Felicidades!</string>
    <string name="completado_libro">"Has completado el libro "</string>
    <string name="cerrar">Cerrar</string>

    <!-- Popup -->
    <string name="frase_nacidos">“Si siempre llegas a tiempo, eso significa que nunca tienes nada mejor que hacer.”</string>
    <string name="frase_elpozo">“Escribo estas palabras en acero, pues todo lo que no esté grabado en metal es indigno de confianza.”</string>
    <string name="frase_elheroe">“Es cosa de la naturaleza. A cada empujón le corresponde un tirón. Una consecuencia.”</string>
    <string name="frase_elaliento">“Me forjó para destruir las cosas que eran malignas. Soy bastante bueno en ello. Creo que estaría muy orgullosa de mí.”</string>
    <string name="frase_elcamino">“Vida antes que muerte.Fuerza antes que debilidad.Viaje antes que destino.”</string>
    <string name="frase_palabrasradiantes">“Si tengo que ver este mundo desmoronarse y arder para conseguir lo que necesito, lo haré. Con lágrimas, sí, pero dejaré que suceda.”</string>
    <string name="frase_juramentada">“Arrebatamos las hojas esquirladas a las mujeres y ellas nos quitaron la lectura y la escritura.
Me pregunto quién salió mejor parado.”</string>
    <string name="frase_elritmoguerra">“En un mundo perfecto, nadie tendría que entrenar para la batalla. No vivimos en un mundo perfecto.”</string>

    <!-- Títulos de Libros -->
    <string name="titulo_el_imperio_final">The Final Empire</string>
    <string name="titulo_el_pozo_de_la_ascension">The Well of Ascension</string>
    <string name="titulo_el_heroe_de_las_eras">The Hero of Ages</string>
    <string name="titulo_el_aliento_de_los_dioses">The Breath of the Gods</string>
    <string name="titulo_el_camino_de_los_reyes">The Way of Kings</string>
    <string name="titulo_palabras_radiantes">Words of Radiance</string>
    <string name="titulo_juramentada">Oathbringer</string>
    <string name="titulo_el_ritmo_de_la_guerra">Rhythm of War</string>
    <string name="error_progress">El progreso actual no puede exceder el total.</string>

    <string-array name="frases_carga">
        <item>“Si siempre llegas a tiempo, eso significa que nunca tienes nada mejor que hacer.”</item>
        <item>“Escribo estas palabras en acero, pues todo lo que no esté grabado en metal es indigno de confianza.”</item>
        <item>“Es cosa de la naturaleza. A cada empujón le corresponde un tirón. Una consecuencia.”</item>
        <item>“Me forjó para destruir las cosas que eran malignas. Soy bastante bueno en ello. Creo que estaría muy orgullosa de mí.”</item>
        <item>“Vida antes que muerte.Fuerza antes que debilidad.Viaje antes que destino.”</item>
        <item>“Si tengo que ver este mundo desmoronarse y arder para conseguir lo que necesito, lo haré. Con lágrimas, sí, pero dejaré que suceda.”</item>
        <item>“Arrebatamos las hojas esquirladas a las mujeres y ellas nos quitaron la lectura y la escritura.
Me pregunto quién salió mejor parado.”</item>
        <item>“En un mundo perfecto, nadie tendría que entrenar para la batalla. No vivimos en un mundo perfecto.”</item>
    </string-array>


</resources>