<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="5dp"
    android:background="@drawable/libros_border"
    android:orientation="horizontal"
    android:padding="5dp">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/menufondo"
        android:orientation="vertical"
        android:paddingStart="10dp"
        android:paddingTop="5dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/closeButton"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/ic_updesc"
                android:contentDescription="@string/ly_contentD" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="20dp"
                android:paddingVertical="10dp"
                android:text="@string/ly_title"
                android:textColor="@color/white"
                android:textSize="15sp" />


        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/circle_drawable_green"
                android:paddingEnd="30dp" />

            <TextView
                android:id="@+id/nombre1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="7dp"
                android:text="@string/ly_recomend"
                android:textColor="@color/gold_s"
                android:textSize="12sp"
                android:textStyle="italic" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingEnd="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/circle_drawable_purple" />


            <TextView
                android:id="@+id/nombre3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/ly_lI"
                android:textColor="@color/gold_s"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/circle_drawable_gold" />

            <TextView
                android:id="@+id/nombre2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/ly_iS"
                android:textColor="@color/gold_s"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:background="@drawable/circle_drawable_white" />

            <TextView
                android:id="@+id/nombre4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="10dp"
                android:text="@string/ly_pS"
                android:textColor="@color/gold_s"
                android:textSize="12sp"
                android:textStyle="italic" />
        </LinearLayout>


    </LinearLayout>

</LinearLayout>
